# Stillib

./: .gitignore  LICENSE  README.md  installer.py  pyproject.toml
libs/montecarlo/: README.md  pyproject.toml
libs/montecarlo/src/stillib_montecarlo/: __init__.py  core.py  results.py  sources.py
libs/montecarlo/src/stillib_montecarlo/examples/: vector.py
libs/parallelism/: README.md  pyproject.toml
libs/parallelism/src/parallelism/: __init__.py  _engine.py  _example.py  api.py  batching.py  models.py
libs/parallelism/src/stillib_parallelism/: __init__.py  _engine.py  api.py  models.py  progress.py
libs/parallelism/src/stillib_parallelism/examples/: simple.py
libs/paths/: README.md  pyproject.toml
libs/paths/src/stillib_paths/: __init__.py  core.py
libs/paths/src/stillib_paths/examples/: parameterized.py  statictree.py
libs/plotting/: README.md  pyproject.toml
libs/plotting/src/stillib_plotting/: __init__.py  colors.py  core.py  style.py
libs/random/: README.md  pyproject.toml
libs/random/src/stillib_random/: __init__.py  _internals.py  core.py  io.py  manifest.py  multiprocessing.py  provenance.py  state.py
libs/random/src/stillib_random/adapters/: numpy.py  py_random.py
libs/random/src/stillib_random/examples/: io.py  many.py  multi.py  restore.py  resume.py  simple.py
