[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stillib-random"
version = "1.1.0"
description = "Random Number Generator utilities for scientific computing."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Andreas Stillits", email = "andreas.stillits@gmail.com" }
]
dependencies = [
  "numpy>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "black>=24",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stillib_random*"]
namespaces = false
